@@ -106,11 +106,13 @@ h1 {
 
 <h1><a id="faq">FAQ<a></h1>
 <br><B>Q:</B>How can I get help?
-<br>A: You can join the <A HREF="https://lists.r-forge.r-project.org/cgi-bin/mailman/listinfo/rqda-help">rqda-help</A> list and post questions via email.
+<br>A: You can join the <B><A HREF="https://lists.r-forge.r-project.org/cgi-bin/mailman/listinfo/rqda-help">rqda-help</A></B> list and post questions via email.
 <br><B>Q:</B>Can I conduct statistical analysis of the codes?
 <br>A: Depends on the method of coding. For factual coding, you can do statisitcal analysis. If the documents are representative, you can do referential analysis; otherwise, you can only conduct descriptive analysis.
 <br><B>Q:</B>Why should I use computer-aided QDA? Is it more efficient?
 <br>A: CAQDA is time-consuming, but it makes the data analysis process more systematic, more tractable, and more transparent. It "forces" you to think hard about your data and the connection with theory (once you know the idea behind the CAQDA). Depending on the methodological paradigms, you may conduct Qualitative Comparative Analysis or examine some hypotheses (Not in the sense of statistical test of hypotheses) (See Kelle 1995 for details).
 <br><B>Q:</B> My Vista is English, but the *.rqda include Chinese, and it can not display correctly.
 <br>A: One possible reason is the font issue. You can uninstall GTK+. Launch R, set the locale to CHS by command Sys.setlocale(,"CHS"), load RGtk2 by command library(RGtk2), then R will ask if you want to install GTK+, install it. Then you can launch RQDA. It should work.
+<br><B>Q:</B> I press the save button in the memo/journal widget, but it warns that I have not saved it yet when I try to close the widget. Why?
+<br>A: This may be due to the encoding issue. Set the appropriate locale by Sys.setlocale function. The technical aspect is that RQDA needs to convert ' into '' by gsub in order to save it in SQLite database, without proper locales, the conversion may not what you want.
 </Body>
